# BiteRight

./: README.md  app-plan.md
backend/: .env  .gitattributes  Cargo.toml  backend.sln
backend/api/: Cargo.toml
backend/api/src/: main.rs
backend/backend/: .env  Cargo.toml
backend/backend/migrations/: 20231112183010_add-refresh-token.sql
backend/backend/src/: config.rs  main.rs
backend/backend/src/errors/: db.rs  mod.rs  util.rs
backend/backend/src/models/: mod.rs
backend/backend/src/routes/: mod.rs
backend/backend/src/utils/: password.rs
backend/bench/: unit_list.js
backend/config/: Cargo.toml
backend/config/src/: lib.rs  token_config.rs
backend/domain/: Cargo.toml
backend/domain/src/: lib.rs  refresh_token.rs  user.rs
backend/dtos/: Cargo.toml
backend/dtos/src/: lib.rs
backend/dtos/src/user/: me.rs  mod.rs  sign_in.rs  sign_up.rs
backend/endpoints/: Cargo.toml
backend/endpoints/src/: lib.rs
backend/endpoints/src/common/: mod.rs  validate_extractor.rs
backend/endpoints/src/user/: me.rs  mod.rs  sign_in.rs  sign_up.rs
backend/errors/: Cargo.toml
backend/errors/src/: api.rs  config.rs  lib.rs
backend/errors/src/services/: mod.rs  password_service.rs  token_service.rs
backend/errors/src/user/: common.rs  me.rs  mod.rs  sign_in.rs  sign_up.rs
backend/migrations/: 20231112130419_initial-migration.sql  20231112133816_seed-system-tables.sql
backend/persistence/: Cargo.toml
backend/persistence/src/: lib.rs  refresh_token_repository.rs  user_repository.rs
backend/services/: Cargo.toml
backend/services/src/: password_service.rs  token_service.rs
backend/src/: config.rs  main.rs
backend/src/BiteRight.Application/: BiteRight.Application.csproj
backend/src/BiteRight.Application/Common/: CommandHandlerBase.cs  HandlerBase.cs  MediatorValidationBehaviour.cs  QueryHandlerBase.cs
backend/src/BiteRight.Domain/: BiteRight.Domain.csproj
backend/src/BiteRight.Domain/Categories/: Category.cs  CategoryId.cs  Name.cs  Photo.cs  PhotoId.cs  Translation.cs  TranslationId.cs
backend/src/BiteRight.Domain/Common/: AggregateRoot.cs  DomainEvent.cs  Entity.cs  GuidId.cs  IDomainEventHolder.cs  IDomainEventPublisher.cs  Id.cs  StringId.cs  ValueObject.cs
backend/src/BiteRight.Domain/Countries/: Code.cs  Country.cs  CountryId.cs  Name.cs
backend/src/BiteRight.Domain/Currencies/: Currency.cs  CurrencyId.cs  ISO4217Code.cs  Name.cs  Symbol.cs
backend/src/BiteRight.Domain/Languages/: Code.cs  Language.cs  LanguageId.cs  Name.cs
backend/src/BiteRight.Domain/Product/: AddedDateTime.cs  Description.cs  ExpirationDate.cs  Name.cs  Price.cs  PriceId.cs  Product.cs  ProductId.cs  Usage.cs
backend/src/BiteRight.Domain/Products/: AddedDateTime.cs  Amount.cs  AmountId.cs  Consumption.cs  Description.cs  Disposed.cs  DisposedState.cs  ExpirationDate.cs  Name.cs  Price.cs  PriceId.cs  Product.cs  ProductId.cs  Usage.cs
backend/src/BiteRight.Domain/Units/: Abbreviation.cs  Name.cs  Translation.cs  TranslationId.cs  Unit.cs  UnitId.cs  UnitSystem.cs
backend/src/BiteRight.Domain/Users/: Email.cs  IdentityId.cs  JoinedAt.cs  Profile.cs  ProfileId.cs  User.cs  UserId.cs  Username.cs
backend/src/BiteRight.Infrastructure/: BiteRight.Infrastructure.csproj
backend/src/BiteRight.Infrastructure/Auth0Management/: Auth0GetTokenResponse.cs  Auth0IdentityManager.cs
backend/src/BiteRight.Infrastructure/Common/: BlobStorageFileProvider.cs  FileSystemFileProvider.cs  (+5 more)
backend/src/BiteRight.Options/: Auth0Options.cs  BiteRight.Options.csproj  BlobStorageFileProviderOptions.cs  CacheOptions.cs  FileSystemFileProviderOptions.cs
backend/src/BiteRight.Resources/: BiteRight.Resources.csproj
backend/src/BiteRight.Utils/: CommonRegexes.cs
backend/src/BiteRight.Web/: BiteRight.Web.csproj  IWebAssemblyMarker.cs  Program.cs  appsettings.Development.json  appsettings.json
backend/src/db/: category.rs  currency.rs  mod.rs  refresh_token.rs  template.rs  unit.rs  user.rs
backend/src/errors/: api.rs  config.rs  db.rs  mod.rs  models.rs  util.rs
backend/src/handlers/: mod.rs
backend/src/models/: mod.rs
backend/src/routes/: assets.rs  category.rs  currency.rs  mod.rs  template.rs  unit.rs  user.rs
backend/src/utils/: db.rs  mod.rs  password.rs  regex.rs  string.rs  token.rs
backend/test/BiteRight.IntegrationTests/: BiteRight.IntegrationTests.csproj
backend/test/BiteRight.Web.Tests.Integration/: BiteRight.Web.Tests.Integration.csproj  BiteRightBackendFactory.cs  TestUsers.cs
backend/utils/: Cargo.toml
backend/utils/src/: db.rs
(+865 files in other folders)
