[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
dotenvy = "0.15.7"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6.20", features = ["headers", "macros"] }
sqlx = { version = "0.7.2", features = ["json", "postgres", "chrono", "runtime-tokio", "tls-native-tls"] }
serde = { version = "1.0.192", features = ["derive"] }
anyhow = "1.0.75"
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
jsonwebtoken = "9.1.0"
serde_json = "1.0.108"
argon2 = "0.5.2"
rand = { version = "0.8.5", features = [] }
validator = { version = "0.16.1", features = ["derive"] }
tower-http = { version = "0.4.4", features = ["fs", "trace"] }
serde_urlencoded = "0.7.1"
regex = "1.10.2"
lazy_static = { version = "1.4.0", features = [] }