[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
tokio = { version = "1", features = ["full"] }
serde = "1.0.192"
anyhow = "1.0.75"
serde_json = "1.0.108"
tower-http = { version = "0.4.4", features = ["trace"] }
config = { path = "../config" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
utils = { path = "../utils" }
endpoints = { path = "../endpoints" }
services = { path = "../services" }
