[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
dotenvy = "0.15.7"
tokio = { version = "1", features = ["full"] }
axum = "0.6.20"
sqlx = { version = "0.7.2", features = ["runtime-tokio-native-tls", "json", "postgres"] }
serde = { version = "1.0.192", features = ["derive"] }
anyhow = "1.0.75"
thiserror = "1.0.50"