[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
dotenvy = "0.15.7"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6.20", features = ["headers"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio-native-tls", "json", "postgres", "chrono"] }
serde = { version = "1.0.192", features = ["derive"] }
anyhow = "1.0.75"
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
jsonwebtoken = "9.1.0"
serde_json = "1.0.108"