[package]
name = "endpoints"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio-native-tls", "json", "postgres"] }
dtos = { path = "../dtos" }
anyhow = "1.0.75"
errors = { path = "../errors" }
services = { path = "../services" }
persistence = { path = "../persistence" }
hyper = "0.14.27"
validator = "0.16.1"
serde = "1.0.192"
serde_json = "1.0.108"
domain = { path = "../domain" }
config = { path = "../config" }
