[package]
name = "services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
argon2 = { version = "0.5.2", features = [] }
errors = { path = "../errors" }
jsonwebtoken = "9.1.0"
chrono = "0.4.31"
serde = { version = "1.0.192", features = ["derive"] }
rand = "0.8.5"
config = { path = "../config" }
domain = { path = "../domain" }